--- a/weitaixin/src/main/res/values/dimens.xml
+++ b/weitaixin/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
 
     <!--Font Size-->
 
+    <dimen name="font10">10sp</dimen>
     <dimen name="font12">12sp</dimen>
     <dimen name="font14">14sp</dimen>
     <dimen name="font16">16sp</dimen>
