--- a/weitaixin/src/main/res/layout/item_record.xml
+++ b/weitaixin/src/main/res/layout/item_record.xml
@@ -6,50 +6,50 @@
     android:orientation="horizontal">
 
     <TextView
-        android:layout_width="10dp"
+        android:layout_width="20dp"
         android:layout_height="match_parent"
         android:background="#00FFFFFF" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="70dp"
         android:background="@drawable/recode_half_circle_bg">
 
         <LinearLayout
             android:id="@+id/ll_Layout"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerVertical="true"
-            android:orientation="vertical"
-            android:gravity="center"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/record_circle">
+            android:background="@drawable/record_circle"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvCircleTime1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/font12"
+                android:text="20周"
                 android:textColor="@color/gray3"
-                android:text="20周" />
+                android:textSize="@dimen/font10" />
 
             <TextView
                 android:id="@+id/tvCircleTime2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="05"
                 android:textColor="@color/black1"
-                android:textSize="@dimen/font20"
-                android:text="05" />
+                android:textSize="@dimen/font18" />
         </LinearLayout>
 
 
         <ImageView
             android:id="@+id/ivClock"
-            android:layout_width="20dp"
-            android:layout_marginTop="4dp"
-            android:layout_height="20dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:layout_alignTop="@id/ll_Layout"
             android:layout_marginLeft="30dp"
+            android:layout_marginTop="4dp"
             android:layout_toRightOf="@id/ll_Layout"
             android:scaleType="fitCenter"
             android:src="@drawable/record_clock" />
@@ -61,12 +61,12 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@id/ivClock"
             android:layout_alignTop="@id/ll_Layout"
+            android:layout_marginLeft="6dp"
             android:layout_toRightOf="@id/ivClock"
             android:singleLine="true"
-            android:layout_marginLeft="6dp"
             android:text="18分27秒"
             android:textColor="@color/black0"
-            android:textSize="@dimen/font22" />
+            android:textSize="@dimen/font18" />
 
 
         <TextView
