--- a/weitaixin/src/main/res/layout/activity_reset_password.xml
+++ b/weitaixin/src/main/res/layout/activity_reset_password.xml
@@ -34,21 +34,22 @@
             android:id="@+id/et_password_reset"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="请输入新密码"
             android:layout_marginRight="60dp"
             android:background="@null"
+            android:hint="请输入新密码"
             android:padding="14dp"
             android:singleLine="true"
             android:textSize="@dimen/font_normal" />
 
-        <ImageView
+        <CheckBox
             android:id="@+id/ivShowPassword"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="20dp"
             android:layout_gravity="right|center_vertical"
             android:layout_marginRight="20dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/default_ptr_flip" />
+            android:background="@drawable/eye_selector"
+            android:button="@null"
+            android:scaleType="fitCenter" />
 
     </FrameLayout>
 
@@ -95,11 +96,13 @@
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
-        <ImageView
+        <CheckBox
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:scaleType="fitXY"
-            android:src="@drawable/regist_icon" />
+            android:button="@null"
+            android:background="@drawable/pitch_selector"
+             />
 
         <TextView
             android:layout_width="wrap_content"
