是否接受协议

--- a/weitaixin/src/main/res/layout/activity_login_sms_auth_code.xml
+++ b/weitaixin/src/main/res/layout/activity_login_sms_auth_code.xml
@@ -80,6 +80,7 @@
             android:scaleType="fitXY" />
 
         <TextView
+            android:id="@+id/tvRuleLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
