--- a/weitaixin/src/main/res/layout/activity_set_system_guardian.xml
+++ b/weitaixin/src/main/res/layout/activity_set_system_guardian.xml
@@ -27,7 +27,7 @@
             android:textColor="@drawable/text_color_hei_selector"
             android:textSize="@dimen/font_normal"/>
 
-        <cn.ihealthbaby.weitaixin.view.SlideSwitch
+        <cn.ihealthbaby.weitaixin.view.SlideSwitchView
             android:id="@+id/slide_switch_begin"
             android:layout_width="50dip"
             android:layout_height="30dip"
@@ -60,7 +60,7 @@
                 android:textColor="@drawable/text_color_hei_selector"
                 android:textSize="@dimen/font_normal"/>
 
-            <cn.ihealthbaby.weitaixin.view.SlideSwitch
+            <cn.ihealthbaby.weitaixin.view.SlideSwitchView
                 android:id="@+id/slide_switch_alarm"
                 android:layout_width="50dip"
                 android:layout_height="30dip"
