--- a/weitaixin/src/main/res/layout/activity_info_edit.xml
+++ b/weitaixin/src/main/res/layout/activity_info_edit.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/gray5"
+    android:background="@color/white0"
     android:layout_height="match_parent"
     tools:context="cn.ihealthbaby.weitaixin.ui.LoginActivity">
 
@@ -30,36 +30,83 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/frame_selector">
 
+        <LinearLayout
+            android:id="@+id/ll_user_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@null"
+                android:gravity="right"
+                android:textColor="@color/text_color_hint"
+                android:hint="姓名"
+                android:padding="16dp"
+                android:singleLine="true"
+                android:maxLength="10"
+                android:visibility="gone"
+                android:textSize="@dimen/font_normal" />
+
         <EditText
             android:id="@+id/et_name_info"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:background="@null"
             android:gravity="center"
-            android:textColorHint="@color/black1"
+            android:textColorHint="@color/text_color_hint"
             android:textColor="@color/black1"
             android:hint="请输入名字"
             android:padding="16dp"
             android:singleLine="true"
             android:maxLength="10"
             android:textSize="@dimen/font_normal" />
+        </LinearLayout>
 
         <View
             android:id="@+id/view_line_info"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_below="@id/et_name_info"
-            android:background="#6c6c6c" />
+            android:layout_below="@id/ll_user_name"
+            android:background="@color/gray11" />
+
+        <LinearLayout
+            android:id="@+id/ll_birthday"
+            android:layout_below="@id/view_line_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/tv_birthday"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@null"
+                android:gravity="right"
+                android:textColor="@color/text_color_hint"
+                android:hint="生日"
+                android:padding="16dp"
+                android:singleLine="true"
+                android:maxLength="10"
+                android:visibility="gone"
+                android:textSize="@dimen/font_normal" />
 
         <TextView
             android:id="@+id/et_birthdate_info"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
-            android:layout_below="@id/view_line_info"
+            android:layout_below="@id/ll_user_name"
             android:layout_centerHorizontal="true"
             android:background="@null"
-            android:textColorHint="@color/black1"
+            android:textColorHint="@color/text_color_hint"
             android:textColor="@color/black1"
             android:gravity="center"
             android:hint="你的出生日期"
@@ -67,20 +114,44 @@
             android:singleLine="true"
             android:textSize="@dimen/font_normal" />
 
+        </LinearLayout>
+
         <View
             android:id="@+id/view_line2_info"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_below="@id/et_birthdate_info"
-            android:background="#6c6c6c" />
+            android:layout_below="@id/ll_birthday"
+            android:background="@color/gray11" />
+        <LinearLayout
+            android:layout_below="@+id/view_line2_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/tv_expect_day"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@null"
+                android:gravity="right"
+                android:textColor="@color/text_color_hint"
+                android:hint="预产日期"
+                android:padding="16dp"
+                android:singleLine="true"
+                android:maxLength="10"
+                android:visibility="gone"
+                android:textSize="@dimen/font_normal" />
 
         <TextView
             android:id="@+id/et_date_info"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:layout_below="@id/view_line2_info"
             android:layout_centerHorizontal="true"
-            android:textColorHint="@color/black1"
+            android:textColorHint="@color/text_color_hint"
             android:textColor="@color/black1"
             android:background="@null"
             android:gravity="center"
@@ -88,7 +159,7 @@
             android:padding="16dp"
             android:singleLine="true"
             android:textSize="@dimen/font_normal" />
-
+        </LinearLayout>
     </RelativeLayout>
 
 
