--- a/weitaixin/src/main/res/layout/activity_login.xml
+++ b/weitaixin/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
             android:numeric="integer"
             android:padding="14dp"
             android:phoneNumber="true"
-            android:textColorHint="@color/gray12"
+            android:textColorHint="@color/text_color_hint"
             android:singleLine="true"
             android:textColor="@color/black2"
             android:text="15210015381"
@@ -65,7 +65,7 @@
                 android:maxLength="20"
                 android:padding="16dp"
                 android:password="true"
-                android:textColorHint="@color/gray12"
+                android:textColorHint="@color/text_color_hint"
                 android:singleLine="true"
                 android:text="123456"
                 android:textSize="@dimen/font_normal" />
