--- a/weitaixin/src/main/res/layout/view_grade_dialog.xml
+++ b/weitaixin/src/main/res/layout/view_grade_dialog.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:background="@color/white0"
+        android:background="@drawable/shape_grade_dialog"
         android:orientation="vertical"
         android:visibility="visible">
 
